@@ -47,11 +47,29 @@
 #endif
 
 
+// Microsoft Visual C++ includes copies of the Windows header files 
+// that were current at the time Visual C++ was released.
+// The Windows header files use macros to indicate which versions 
+// of Windows support many programming elements. Therefore, you must 
+// define these macros to use new functionality introduced in each 
+// major operating system release. (Individual header files may use 
+// different macros; therefore, if compilation problems occur, check 
+// the header file that contains the definition for conditional 
+// definitions.) For more information, see SdkDdkVer.h.
+
 #if defined(_WIN32_WINNT) && (_WIN32_WINNT < 0x0501)
 	#error Unsupported Windows version.
+#elif defined(NTDDI_VERSION) && (NTDDI_VERSION < 0x05010100)
+	#error Unsupported Windows version.
 #elif !defined(_WIN32_WINNT)
-	// define minimum supported
+	// Define minimum supported version.
+	// This can be changed, if needed.
+	// Otherwise, the Platform_WIN32.h will do
+	// its best to determine the appropriate values
+	// and may redefine these. See Platform_WIN32.h
+	// for details.
 	#define _WIN32_WINNT 0x0501
+	#define NTDDI_VERSION 0x05010100
 #endif
 
 
