@@ -64,6 +64,8 @@ Release 1.5.3 (2014-05-xx)
 - fixed GH #321: trivial build fixes (BB QNX build)
 - fixed GH #440: MongoDB ObjectId string formatting
 - added SevenZip library (Guenter Obiltschnig)
+- fixed GH #442: Use correct prefix length field of Windows IP_ADAPTER_PREFIX structure
+- improved GH #328: NetworkInterface on Windows XP
 
 Release 1.5.2 (2013-09-16)
 ==========================
